--- a/src/__index.html
+++ b/src/__index.html
@@ -201,7 +201,9 @@
 				<!--CONTENT end-->
 
 				<!--SIDEBAR-->
-				@@include('_layout_side-menu.tpl')
+				@@include('_layout_side-menu.tpl', {
+					"largeView": "true"
+				})
 				<!--SIDEBAR-->
 			</div>
 		</div>
@@ -209,4 +211,6 @@
 	<!--MAIN end-->
 </div>
 
-@@include('_layout_foot.tpl')
+@@include('_layout_foot.tpl', {
+	"site": "dvemz"
+})
