--- a/src/map-site.html
+++ b/src/map-site.html
@@ -5313,6 +5313,82 @@
 	</div>
 	<!-- >>> foot.tpl <<< -->
 	<!--footer-->
+	<footer class="footer">
+		<div class="max-wrap layout">
+			<div class="footer__holder">
+				<!--footer common-->
+				<div class="footer-common">
+					<div class="footer-common-holder">
+						<!--footer nav-->
+						<div class="footer-nav">
+							<div class="footer-nav__col">
+								<strong class="footer-nav__title"><a href="#"><span>Электрощитовое оборудование</span></a></strong>
+								<ul class="footer-nav__links">
+									<li><a href="#"><span>Трансформаторные подстанции (однотрансформаторные)</span></a></li>
+									<li><a href="#"><span>Камеры сборные односторонние КСО</span></a></li>
+									<li><a href="#"><span>Ячейки ЩО-70</span></a></li>
+								</ul>
+							</div>
+							<div class="footer-nav__col">
+								<strong class="footer-nav__title"><span>Трансформаторы ТМГ</span></strong>
+								<ul class="footer-nav__links">
+									<li><a href="#"><span>Пункт коммерческого учета ПКУ-6 (10) КВ</span></a></li>
+									<li><a href="#"><span>Вводно-распределительные устройства ВРУ</span></a></li>
+									<li><a href="#"><span>Главные распределительные щиты ГРЩ</span></a></li>
+								</ul>
+							</div>
+							<div class="footer-nav__col">
+								<strong class="footer-nav__title"><span>Высоковольтное оборудование</span></strong>
+								<ul class="footer-nav__links">
+									<li><a href="#"><span>Другие низковольтные комплектные устройства  (ШР, ПР, ЯРП, ЯВУ, ШУ, ОЩВ, ЩЭ, ЯТП,ЩСУ, ЩАП, РУСМ, Я5ХХХ,АВР)</span></a></li>
+								</ul>
+							</div>
+							<div class="footer-nav__col">
+								<ul class="footer-nav__list">
+									<li><a href="#"><span>О компании</span></a></li>
+									<li><a href="#"><span>Производство</span></a></li>
+									<li><a href="#"><span>Монтажные работы</span></a></li>
+									<li><a href="#"><span>Сотрудничество</span></a></li>
+									<li><a href="#"><span>Заказ</span></a></li>
+									<li><a href="#"><span>Контакты</span></a></li>
+								</ul>
+							</div>
+							<div class="footer-nav__col footer-add-info">
+								<div class="footer-nav__item">
+									<span class="copyright">&copy; 2017 ОАО ДВЭМЗ</span>
+								</div>
+								<div class="footer-nav__item">
+									<ul class="dl">
+										<li>
+											<div class="dt hide">Адрес:</div>
+											<div class="dd">ОАО ДВЭМЗ, г. Владивосток, ул. Молодежная, строение 1, корп. 3</div>
+										</li>
+										<li>
+											<div class="dt">Тел:</div>
+											<div class="dd"><a href="tel:+7 (423) 230-21-37">+7 (423) 230-21-37</a></div>
+										</li>
+										<li>
+											<div class="dt">Факс:</div>
+											<div class="dd">(423) 254 48 86</div>
+										</li>
+										<li>
+											<div class="dt">Эл. почта:</div>
+											<div class="dd"><a href="mailto:info@dvemz.ru">info@dvemz.ru</a></div>
+										</li>
+									</ul>
+								</div>
+								<div class="footer-nav__item">
+									<strong class="dev">Дизайн сайта: <a href="http://astronim.by/">Astronim*Support</a></strong>
+								</div>
+							</div>
+						</div>
+						<!--footer nav end-->
+					</div>
+				</div>
+				<!--footer common end-->
+			</div>
+		</div>
+	</footer>
 	<!--footer end-->
 	<!--Map-->
 	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAnFqiG7GVEuZZeE5XCILGj1Tqz1KOMye8&sensor=false&extension=.js&language=ru"></script>
