--- a/src/__catalog-has-category.html
+++ b/src/__catalog-has-category.html
@@ -1,5 +1,5 @@
 @@include('_layout_head.tpl', {
-	"title": "ДВЭМЗ - Каталог",
+	"title": "ДВЭМЗ - Страница продукта с подкатегориями",
 	"pageClass": "has-catalog-menu"
 })
 
@@ -24,25 +24,6 @@
 				<div class="content-wrap">
 					<div class="content user-content">
 						<div class="c-sections">
-							<section class="c-section">
-								<div class="c-section__container">
-									<div class="c-section__bg" style="background-image: url('img/bg-catalog-01.jpg');"></div>
-									<div class="c-section__align">
-										<div class="c-section__layout">
-											<div class="c-section-heading"><h1>Электрощитовое оборудование</h1></div>
-											<div class="c-section-items">
-												<div class="c-section-item"><i>01</i><a href="#catalog-1-1" data-href="catalog-has-category.html"><span>Трансформаторные подстанции (однотрансформаторные)</span></a></div>
-												<div class="c-section-item"><i>02</i><a href="#catalog-1-2" data-href="catalog-has-category.html"><span>Вводно-распределительные устройства ВРУ</span></a></div>
-												<div class="c-section-item"><i>03</i><a href="#catalog-1-3" data-href="catalog-has-category.html"><span>Камеры сборные односторонние КСО</span></a></div>
-												<div class="c-section-item"><i>04</i><a href="#catalog-1-4" data-href="catalog-has-category.html"><span>Главные распределительные щиты ГРЩ</span></a></div>
-												<div class="c-section-item"><i>05</i><a href="#catalog-1-5" data-href="catalog-has-category.html"><span>Другие низковольтные комплектные устройства  (ШР, ПР, ЯРП, ЯВУ, ШУ, ОЩВ, ЩЭ, ЯТП, ЩСУ</span></a></div>
-												<div class="c-section-item"><i>06</i><a href="#catalog-1-6" data-href="catalog-has-category.html"><span>Ячейки ЩО-70</span></a></div>
-												<div class="c-section-item"><i>07</i><a href="#catalog-1-7" data-href="catalog-has-category.html"><span>Пункт коммерческого учета ПКУ-6 (10) КВ</span></a></div>
-											</div>
-										</div>
-									</div>
-								</div>
-							</section>
 							<section class="c-section js-tabs" data-collapsed="true" id="catalog-1-1">
 								<div class="c-section__container">
 									<div class="c-section__bg" style="background-image: url('img/bg-catalog-02.jpg');"></div>
@@ -50,7 +31,7 @@
 										<div class="c-section__layout">
 											<div class="c-section-counter">01</div>
 											<div class="c-section-title">
-												<h2><a href="catalog-has-category.html">Трансформаторные подстанции</a></h2>
+												<h2><a href="#">Трансформаторные подстанции</a></h2>
 												<div class="c-section-description">Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в домашних условиях.</div>
 											</div>
 											<div class="c-section-thumbs">
@@ -91,9 +72,6 @@
 													@@loop("_tpl_goods-items.tpl", "includes-json/goods-items-01.json")
 												</section>
 											</div>
-											<div class="goods__footer">
-												<a href="#" class="btn-outline btn-with-arrow"><span>Смотреть все</span><i>&nbsp;</i></a>
-											</div>
 										</div>
 									</div>
 									<div class="c-section-panel js-tab-content" id="c-section-panel-011">
@@ -131,7 +109,7 @@
 										<div class="c-section__layout">
 											<div class="c-section-counter">02</div>
 											<div class="c-section-title">
-												<h2><a href="catalog-has-category.html">Камеры сборные односторонние КСО</a></h2>
+												<h2><a href="#">Камеры сборные односторонние КСО</a></h2>
 												<div class="c-section-description">Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в домашних условиях.</div>
 											</div>
 											<div class="c-section-thumbs">
@@ -171,7 +149,7 @@
 										<div class="layout-wide">
 											<div class="goods">
 												<div class="goods__caption">
-													<h3>КСО 393 (у ЭИ+) И 366М (у ДВ Энс-с)</h3>
+													<h3>КСО 202М (у ЭИ+) И 299М (у ДВ Энс-с)</h3>
 													<a class="info" href="#">Подробнее</a>
 												</div>
 												<section class="goods__list">
@@ -245,7 +223,7 @@
 										<div class="c-section__layout">
 											<div class="c-section-counter">07</div>
 											<div class="c-section-title">
-												<h2><a href="catalog-has-category.html">Другие низковольтные комплектные устройства</a></h2>
+												<h2><a href="#">Другие низковольтные комплектные устройства</a></h2>
 												<div class="c-section-description">Сайт рыбатекст поможет дизайнеру.</div>
 											</div>
 											<div class="c-section-thumbs">
