--- a/src/automatic-news-inner.html
+++ b/src/automatic-news-inner.html
@@ -38,6 +38,15 @@
 
 <body class="ea-site">
 	<!--[if lt IE 9]> <div class="browserupgrade"><p>You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p></div> <![endif]-->
+	<script>
+		// shame
+		// значение необходимо для получения ширины окна браузера без учета скролла
+		var windowWidth = Math.max(
+			document.body.scrollWidth, document.documentElement.scrollWidth,
+			document.body.offsetWidth, document.documentElement.offsetWidth,
+			document.body.clientWidth, document.documentElement.clientWidth
+		)
+	</script>
 	<!-- >>> head.tpl END <<< -->
 	<div class="wrapper">
 		<!--HEADER-->
@@ -701,7 +710,7 @@
 					<!--catalog-menu item start-->
 					<li id="catalog-menu-item-01" class="has-drop js-tab-content">
 						<div class="catalog-menu__tab catalog-menu__tab-js">
-							<a href="typography.html"><span>Кабельно-проводниковая продукция и кабеленесущие системы</span></a>
+							<a href="automatic-catalog.html"><span>Кабельно-проводниковая продукция и кабеленесущие системы</span></a>
 							<span class="catalog-menu__angle catalog-menu-handler-js"><i>&nbsp;</i></span>
 						</div>
 						<!--(2) START catalog-menu SECOND level-->
@@ -1117,7 +1126,7 @@
 					<!--catalog-menu item start-->
 					<li id="catalog-menu-item-02" class="has-drop js-tab-content">
 						<div class="catalog-menu__tab catalog-menu__tab-js">
-							<a href="#"><span>Светотехнические изделия</span></a>
+							<a href="automatic-catalog.html"><span>Светотехнические изделия</span></a>
 							<span class="catalog-menu__angle catalog-menu-handler-js"><i>&nbsp;</i></span>
 						</div>
 						<!--(2) START catalog-menu SECOND level-->
@@ -1461,7 +1470,7 @@
 					<!--catalog-menu item start-->
 					<li id="catalog-menu-item-03" class="has-drop js-tab-content">
 						<div class="catalog-menu__tab catalog-menu__tab-js">
-							<a href="#"><span>Модульное, электрощитовое и коммутационное оборудование </span></a>
+							<a href="automatic-catalog.html"><span>Модульное, электрощитовое и коммутационное оборудование </span></a>
 							<span class="catalog-menu__angle catalog-menu-handler-js"><i>&nbsp;</i></span>
 						</div>
 						<!--(2) START catalog-menu SECOND level-->
@@ -2039,7 +2048,7 @@
 					<!--catalog-menu item start-->
 					<li id="catalog-menu-item-04" class="has-drop js-tab-content">
 						<div class="catalog-menu__tab catalog-menu__tab-js">
-							<a href="#"><span>Оборудование защиты и автоматизации </span></a>
+							<a href="automatic-catalog.html"><span>Оборудование защиты и автоматизации </span></a>
 							<span class="catalog-menu__angle catalog-menu-handler-js"><i>&nbsp;</i></span>
 						</div>
 						<!--(2) START catalog-menu SECOND level-->
@@ -2173,7 +2182,7 @@
 					<!--catalog-menu item start-->
 					<li id="catalog-menu-item-05" class="has-drop js-tab-content">
 						<div class="catalog-menu__tab catalog-menu__tab-js">
-							<a href="#"><span>Высоковольтное оборудование</span></a>
+							<a href="automatic-catalog.html"><span>Высоковольтное оборудование</span></a>
 							<span class="catalog-menu__angle catalog-menu-handler-js"><i>&nbsp;</i></span>
 						</div>
 						<!--(2) START catalog-menu SECOND level-->
@@ -2271,7 +2280,7 @@
 					<!--catalog-menu item start-->
 					<li id="catalog-menu-item-06" class="has-drop js-tab-content">
 						<div class="catalog-menu__tab catalog-menu__tab-js">
-							<a href="#"><span>Электромонтажные изделия и аксессуары</span></a>
+							<a href="automatic-catalog.html"><span>Электромонтажные изделия и аксессуары</span></a>
 							<span class="catalog-menu__angle catalog-menu-handler-js"><i>&nbsp;</i></span>
 						</div>
 						<!--(2) START catalog-menu SECOND level-->
@@ -2495,7 +2504,7 @@
 					<!--catalog-menu item start-->
 					<li id="catalog-menu-item-07" class="has-drop js-tab-content">
 						<div class="catalog-menu__tab catalog-menu__tab-js">
-							<a href="#"><span>Силовое оборудование и электроизмерительные приборы</span></a>
+							<a href="automatic-catalog.html"><span>Силовое оборудование и электроизмерительные приборы</span></a>
 							<span class="catalog-menu__angle catalog-menu-handler-js"><i>&nbsp;</i></span>
 						</div>
 						<!--(2) START catalog-menu SECOND level-->
@@ -2671,7 +2680,7 @@
 					<!--catalog-menu item start-->
 					<li id="catalog-menu-item-08" class="has-drop js-tab-content">
 						<div class="catalog-menu__tab catalog-menu__tab-js">
-							<a href="#"><span>Бытовые электроприборы, электроустановочные изделия и инструмент</span></a>
+							<a href="automatic-catalog.html"><span>Бытовые электроприборы, электроустановочные изделия и инструмент</span></a>
 							<span class="catalog-menu__angle catalog-menu-handler-js"><i>&nbsp;</i></span>
 						</div>
 						<!--(2) START catalog-menu SECOND level-->
@@ -2925,7 +2934,7 @@
 					<!--catalog-menu item start-->
 					<li id="catalog-menu-item-09" class="has-drop js-tab-content">
 						<div class="catalog-menu__tab catalog-menu__tab-js">
-							<a href="#"><span>Инструмент</span></a>
+							<a href="automatic-catalog.html"><span>Инструмент</span></a>
 							<span class="catalog-menu__angle catalog-menu-handler-js"><i>&nbsp;</i></span>
 						</div>
 						<!--(2) START catalog-menu SECOND level-->
