--- a/src/map-site.html
+++ b/src/map-site.html
@@ -38,6 +38,15 @@
 
 <body class="ea-site ea-catalog-page ea-has-catalog-menu">
 	<!--[if lt IE 9]> <div class="browserupgrade"><p>You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p></div> <![endif]-->
+	<script>
+		// shame
+		// значение необходимо для получения ширины окна браузера без учета скролла
+		var windowWidth = Math.max(
+			document.body.scrollWidth, document.documentElement.scrollWidth,
+			document.body.offsetWidth, document.documentElement.offsetWidth,
+			document.body.clientWidth, document.documentElement.clientWidth
+		)
+	</script>
 	<!-- >>> head.tpl END <<< -->
 	<div class="wrapper">
 		<!--HEADER-->
@@ -483,7 +492,7 @@
 											<!--map-site item start-->
 											<li id="catalog-menu-item-01" class="has-drop js-tab-content">
 												<div class="map-site__tab map-site__tab-js">
-													<a href="typography.html"><span>Кабельно-проводниковая продукция и кабеленесущие системы</span></a>
+													<a href="automatic-catalog.html"><span>Кабельно-проводниковая продукция и кабеленесущие системы</span></a>
 													<span class="map-site__angle map-site-handler-js"><i>&nbsp;</i></span>
 												</div>
 												<!--(2) START map-site SECOND level-->
@@ -899,7 +908,7 @@
 											<!--map-site item start-->
 											<li id="catalog-menu-item-02" class="has-drop js-tab-content">
 												<div class="map-site__tab map-site__tab-js">
-													<a href="#"><span>Светотехнические изделия</span></a>
+													<a href="automatic-catalog.html"><span>Светотехнические изделия</span></a>
 													<span class="map-site__angle map-site-handler-js"><i>&nbsp;</i></span>
 												</div>
 												<!--(2) START map-site SECOND level-->
@@ -1243,7 +1252,7 @@
 											<!--map-site item start-->
 											<li id="catalog-menu-item-03" class="has-drop js-tab-content">
 												<div class="map-site__tab map-site__tab-js">
-													<a href="#"><span>Модульное, электрощитовое и коммутационное оборудование </span></a>
+													<a href="automatic-catalog.html"><span>Модульное, электрощитовое и коммутационное оборудование </span></a>
 													<span class="map-site__angle map-site-handler-js"><i>&nbsp;</i></span>
 												</div>
 												<!--(2) START map-site SECOND level-->
@@ -1821,7 +1830,7 @@
 											<!--map-site item start-->
 											<li id="catalog-menu-item-04" class="has-drop js-tab-content">
 												<div class="map-site__tab map-site__tab-js">
-													<a href="#"><span>Оборудование защиты и автоматизации </span></a>
+													<a href="automatic-catalog.html"><span>Оборудование защиты и автоматизации </span></a>
 													<span class="map-site__angle map-site-handler-js"><i>&nbsp;</i></span>
 												</div>
 												<!--(2) START map-site SECOND level-->
@@ -1955,7 +1964,7 @@
 											<!--map-site item start-->
 											<li id="catalog-menu-item-05" class="has-drop js-tab-content">
 												<div class="map-site__tab map-site__tab-js">
-													<a href="#"><span>Высоковольтное оборудование</span></a>
+													<a href="automatic-catalog.html"><span>Высоковольтное оборудование</span></a>
 													<span class="map-site__angle map-site-handler-js"><i>&nbsp;</i></span>
 												</div>
 												<!--(2) START map-site SECOND level-->
@@ -2053,7 +2062,7 @@
 											<!--map-site item start-->
 											<li id="catalog-menu-item-06" class="has-drop js-tab-content">
 												<div class="map-site__tab map-site__tab-js">
-													<a href="#"><span>Электромонтажные изделия и аксессуары</span></a>
+													<a href="automatic-catalog.html"><span>Электромонтажные изделия и аксессуары</span></a>
 													<span class="map-site__angle map-site-handler-js"><i>&nbsp;</i></span>
 												</div>
 												<!--(2) START map-site SECOND level-->
@@ -2277,7 +2286,7 @@
 											<!--map-site item start-->
 											<li id="catalog-menu-item-07" class="has-drop js-tab-content">
 												<div class="map-site__tab map-site__tab-js">
-													<a href="#"><span>Силовое оборудование и электроизмерительные приборы</span></a>
+													<a href="automatic-catalog.html"><span>Силовое оборудование и электроизмерительные приборы</span></a>
 													<span class="map-site__angle map-site-handler-js"><i>&nbsp;</i></span>
 												</div>
 												<!--(2) START map-site SECOND level-->
@@ -2453,7 +2462,7 @@
 											<!--map-site item start-->
 											<li id="catalog-menu-item-08" class="has-drop js-tab-content">
 												<div class="map-site__tab map-site__tab-js">
-													<a href="#"><span>Бытовые электроприборы, электроустановочные изделия и инструмент</span></a>
+													<a href="automatic-catalog.html"><span>Бытовые электроприборы, электроустановочные изделия и инструмент</span></a>
 													<span class="map-site__angle map-site-handler-js"><i>&nbsp;</i></span>
 												</div>
 												<!--(2) START map-site SECOND level-->
@@ -2707,7 +2716,7 @@
 											<!--map-site item start-->
 											<li id="catalog-menu-item-09" class="has-drop js-tab-content">
 												<div class="map-site__tab map-site__tab-js">
-													<a href="#"><span>Инструмент</span></a>
+													<a href="automatic-catalog.html"><span>Инструмент</span></a>
 													<span class="map-site__angle map-site-handler-js"><i>&nbsp;</i></span>
 												</div>
 												<!--(2) START map-site SECOND level-->
@@ -2973,7 +2982,7 @@
 					<!--catalog-menu item start-->
 					<li id="catalog-menu-item-01" class="has-drop js-tab-content current">
 						<div class="catalog-menu__tab catalog-menu__tab-js">
-							<a href="typography.html"><span>Кабельно-проводниковая продукция и кабеленесущие системы</span></a>
+							<a href="automatic-catalog.html"><span>Кабельно-проводниковая продукция и кабеленесущие системы</span></a>
 							<span class="catalog-menu__angle catalog-menu-handler-js"><i>&nbsp;</i></span>
 						</div>
 						<!--(2) START catalog-menu SECOND level-->
@@ -3389,7 +3398,7 @@
 					<!--catalog-menu item start-->
 					<li id="catalog-menu-item-02" class="has-drop js-tab-content">
 						<div class="catalog-menu__tab catalog-menu__tab-js">
-							<a href="#"><span>Светотехнические изделия</span></a>
+							<a href="automatic-catalog.html"><span>Светотехнические изделия</span></a>
 							<span class="catalog-menu__angle catalog-menu-handler-js"><i>&nbsp;</i></span>
 						</div>
 						<!--(2) START catalog-menu SECOND level-->
@@ -3733,7 +3742,7 @@
 					<!--catalog-menu item start-->
 					<li id="catalog-menu-item-03" class="has-drop js-tab-content">
 						<div class="catalog-menu__tab catalog-menu__tab-js">
-							<a href="#"><span>Модульное, электрощитовое и коммутационное оборудование </span></a>
+							<a href="automatic-catalog.html"><span>Модульное, электрощитовое и коммутационное оборудование </span></a>
 							<span class="catalog-menu__angle catalog-menu-handler-js"><i>&nbsp;</i></span>
 						</div>
 						<!--(2) START catalog-menu SECOND level-->
@@ -4311,7 +4320,7 @@
 					<!--catalog-menu item start-->
 					<li id="catalog-menu-item-04" class="has-drop js-tab-content">
 						<div class="catalog-menu__tab catalog-menu__tab-js">
-							<a href="#"><span>Оборудование защиты и автоматизации </span></a>
+							<a href="automatic-catalog.html"><span>Оборудование защиты и автоматизации </span></a>
 							<span class="catalog-menu__angle catalog-menu-handler-js"><i>&nbsp;</i></span>
 						</div>
 						<!--(2) START catalog-menu SECOND level-->
@@ -4445,7 +4454,7 @@
 					<!--catalog-menu item start-->
 					<li id="catalog-menu-item-05" class="has-drop js-tab-content">
 						<div class="catalog-menu__tab catalog-menu__tab-js">
-							<a href="#"><span>Высоковольтное оборудование</span></a>
+							<a href="automatic-catalog.html"><span>Высоковольтное оборудование</span></a>
 							<span class="catalog-menu__angle catalog-menu-handler-js"><i>&nbsp;</i></span>
 						</div>
 						<!--(2) START catalog-menu SECOND level-->
@@ -4543,7 +4552,7 @@
 					<!--catalog-menu item start-->
 					<li id="catalog-menu-item-06" class="has-drop js-tab-content">
 						<div class="catalog-menu__tab catalog-menu__tab-js">
-							<a href="#"><span>Электромонтажные изделия и аксессуары</span></a>
+							<a href="automatic-catalog.html"><span>Электромонтажные изделия и аксессуары</span></a>
 							<span class="catalog-menu__angle catalog-menu-handler-js"><i>&nbsp;</i></span>
 						</div>
 						<!--(2) START catalog-menu SECOND level-->
@@ -4767,7 +4776,7 @@
 					<!--catalog-menu item start-->
 					<li id="catalog-menu-item-07" class="has-drop js-tab-content">
 						<div class="catalog-menu__tab catalog-menu__tab-js">
-							<a href="#"><span>Силовое оборудование и электроизмерительные приборы</span></a>
+							<a href="automatic-catalog.html"><span>Силовое оборудование и электроизмерительные приборы</span></a>
 							<span class="catalog-menu__angle catalog-menu-handler-js"><i>&nbsp;</i></span>
 						</div>
 						<!--(2) START catalog-menu SECOND level-->
@@ -4943,7 +4952,7 @@
 					<!--catalog-menu item start-->
 					<li id="catalog-menu-item-08" class="has-drop js-tab-content">
 						<div class="catalog-menu__tab catalog-menu__tab-js">
-							<a href="#"><span>Бытовые электроприборы, электроустановочные изделия и инструмент</span></a>
+							<a href="automatic-catalog.html"><span>Бытовые электроприборы, электроустановочные изделия и инструмент</span></a>
 							<span class="catalog-menu__angle catalog-menu-handler-js"><i>&nbsp;</i></span>
 						</div>
 						<!--(2) START catalog-menu SECOND level-->
@@ -5197,7 +5206,7 @@
 					<!--catalog-menu item start-->
 					<li id="catalog-menu-item-09" class="has-drop js-tab-content">
 						<div class="catalog-menu__tab catalog-menu__tab-js">
-							<a href="#"><span>Инструмент</span></a>
+							<a href="automatic-catalog.html"><span>Инструмент</span></a>
 							<span class="catalog-menu__angle catalog-menu-handler-js"><i>&nbsp;</i></span>
 						</div>
 						<!--(2) START catalog-menu SECOND level-->
