--- a/src/__catalog.html
+++ b/src/__catalog.html
@@ -24,20 +24,20 @@
 				<div class="content-wrap">
 					<div class="content user-content">
 						<div class="c-sections">
-							<section class="c-section">
+							<section class="c-section c-section-main">
 								<div class="c-section__container">
 									<div class="c-section__bg" style="background-image: url('img/bg-catalog-01.jpg');"></div>
 									<div class="c-section__align">
 										<div class="c-section__layout">
 											<div class="c-section-heading"><h1>Электрощитовое оборудование</h1></div>
 											<div class="c-section-items">
-												<div class="c-section-item"><i>01</i><a href="#catalog-1-1" data-href="catalog-has-category.html"><span>Трансформаторные подстанции (однотрансформаторные)</span></a></div>
-												<div class="c-section-item"><i>02</i><a href="#catalog-1-2" data-href="catalog-has-category.html"><span>Вводно-распределительные устройства ВРУ</span></a></div>
-												<div class="c-section-item"><i>03</i><a href="#catalog-1-3" data-href="catalog-has-category.html"><span>Камеры сборные односторонние КСО</span></a></div>
-												<div class="c-section-item"><i>04</i><a href="#catalog-1-4" data-href="catalog-has-category.html"><span>Главные распределительные щиты ГРЩ</span></a></div>
-												<div class="c-section-item"><i>05</i><a href="#catalog-1-5" data-href="catalog-has-category.html"><span>Другие низковольтные комплектные устройства  (ШР, ПР, ЯРП, ЯВУ, ШУ, ОЩВ, ЩЭ, ЯТП, ЩСУ</span></a></div>
-												<div class="c-section-item"><i>06</i><a href="#catalog-1-6" data-href="catalog-has-category.html"><span>Ячейки ЩО-70</span></a></div>
-												<div class="c-section-item"><i>07</i><a href="#catalog-1-7" data-href="catalog-has-category.html"><span>Пункт коммерческого учета ПКУ-6 (10) КВ</span></a></div>
+												<div class="c-section-item"><i>01</i><a href="#catalog-1-1" data-anchor="#catalog-1-1" data-href="catalog-has-category.html"><span>Трансформаторные подстанции (однотрансформаторные)</span></a></div>
+												<div class="c-section-item"><i>02</i><a href="#catalog-1-2" data-anchor="#catalog-1-2" data-href="catalog-has-category.html"><span>Вводно-распределительные устройства ВРУ</span></a></div>
+												<div class="c-section-item"><i>03</i><a href="#catalog-1-3" data-anchor="#catalog-1-3" data-href="automatic-products.html"><span>Камеры сборные односторонние КСО</span></a></div>
+												<div class="c-section-item"><i>04</i><a href="#catalog-1-4" data-anchor="#catalog-1-4" data-href="automatic-products.html"><span>Главные распределительные щиты ГРЩ</span></a></div>
+												<div class="c-section-item"><i>05</i><a href="#catalog-1-5" data-anchor="#catalog-1-5" data-href="automatic-products.html"><span>Другие низковольтные комплектные устройства  (ШР, ПР, ЯРП, ЯВУ, ШУ, ОЩВ, ЩЭ, ЯТП, ЩСУ</span></a></div>
+												<div class="c-section-item"><i>06</i><a href="#catalog-1-6" data-anchor="#catalog-1-6" data-href="automatic-products.html"><span>Ячейки ЩО-70</span></a></div>
+												<div class="c-section-item"><i>07</i><a href="#catalog-1-7" data-anchor="#catalog-1-7" data-href="catalog-has-category.html"><span>Пункт коммерческого учета ПКУ-6 (10) КВ</span></a></div>
 											</div>
 										</div>
 									</div>
