--- a/src/__catalog-has-category.html
+++ b/src/__catalog-has-category.html
@@ -157,8 +157,8 @@
 	<!--SIDEBAR-->
 	@@include('_layout_side-menu.tpl', {
 		"largeView": "",
-		"activeItem": "",
-		"hasDrop": "true"
+		"hasDrop": "true",
+		"activeItem": ""
 	})
 	<!--SIDEBAR-->
 </div>
