--- a/src/__catalog.html
+++ b/src/__catalog.html
@@ -329,8 +329,8 @@
 	<!--SIDEBAR-->
 	@@include('_layout_side-menu.tpl', {
 		"largeView": "",
-		"activeItem": "Электрощитовое оборудование",
-		"hasDrop": "true"
+		"hasDrop": "true",
+		"activeItem": "Электрощитовое оборудование"
 	})
 	<!--SIDEBAR-->
 </div>
