--- a/src/__automatic-card.html
+++ b/src/__automatic-card.html
@@ -48,6 +48,12 @@
 	})
 	<!--SIDEBAR-->
 </div>
+
+
+@@include('_tpl_text-popup.tpl', {
+	"site": "ea"
+})
+
 @@include('_layout_foot.tpl', {
 	"site": "ea"
 })
