--- a/src/automatic-card.html
+++ b/src/automatic-card.html
@@ -516,6 +516,14 @@
 														<span>В корзину</span>
 													</a>
 												</div>
+												<div class="p-card__widget">
+													<a href="#" class="btn-outline btn-with-icon text-popup-opener-js">
+														<i>
+					<svg class="svg-norm" xmlns="http://www.w3.org/2000/svg" version="1.1" x="0px" y="0px" viewBox="0 0 92.5 81.2" enable-background="new 0 0 92.5 81.2"> <path d="M18.7,81.2h63.9v-2.5H18.7V81.2z M73.9,39.2h-2.5v22.4h2.5V39.2z M79.4,27.6V25h-22v2.5H46.5V25h-5.9  L38,22.1h51.7v-2.5h-8.8v-1.1c1-0.2,2.1-0.6,3-1.1c0.9-0.5,1.3-1.2,1.3-2.1c0-0.9-0.6-1.7-1.6-2.2c1.3-0.7,1.5-1.7,1.5-2.1  S84.9,9.7,83.6,9c1-0.5,1.6-1.3,1.6-2.2c0-0.8-0.4-1.6-1.3-2.1c-0.9-0.5-2-0.9-3-1.1V1.3h-2.5v2.5c-1,0.2-2,0.6-2.7,1  c-1,0.5-1.5,1.3-1.5,2.1c0,0.9,0.6,1.6,1.6,2.1c-1.4,0.7-1.5,1.7-1.5,2.1c0,0.4,0.2,1.4,1.5,2.1c-1,0.5-1.6,1.3-1.6,2.1  c0,0.9,0.5,1.6,1.5,2.1c0.7,0.4,1.8,0.8,2.7,1v1.2H63.8v-1.1c1-0.2,2.1-0.6,3-1.1c0.9-0.5,1.3-1.2,1.3-2.1c0-0.9-0.6-1.7-1.6-2.2  c1.3-0.7,1.5-1.7,1.5-2.1S67.9,9.7,66.5,9c1-0.5,1.6-1.3,1.6-2.2c0-0.8-0.4-1.6-1.3-2.1c-0.9-0.5-2-0.9-3-1.1V1.3h-2.5v2.5  c-1,0.2-2,0.6-2.7,1c-1,0.5-1.5,1.3-1.5,2.1c0,0.9,0.6,1.6,1.6,2.1c-1.4,0.7-1.5,1.7-1.5,2.1c0,0.4,0.2,1.4,1.5,2.1  c-1,0.5-1.6,1.3-1.6,2.1c0,0.9,0.5,1.6,1.5,2.1c0.7,0.4,1.8,0.8,2.7,1v1.2H46.8v-1.1c1-0.2,2.1-0.6,3-1.1c0.9-0.5,1.3-1.2,1.3-2.1  c0-0.9-0.6-1.7-1.6-2.2c1.3-0.7,1.5-1.7,1.5-2.1S50.8,9.7,49.5,9c1-0.5,1.6-1.3,1.6-2.2c0-0.8-0.4-1.6-1.3-2.1c-0.9-0.5-2-0.9-3-1.1  V1.3h-2.5v2.5c-1,0.2-2,0.6-2.7,1c-1,0.5-1.5,1.3-1.5,2.1c0,0.9,0.6,1.6,1.6,2.1c-1.4,0.7-1.5,1.7-1.5,2.1c0,0.4,0.2,1.4,1.5,2.1  c-1,0.5-1.6,1.3-1.6,2.1c0,0.9,0.5,1.6,1.5,2.1c0.7,0.4,1.8,0.8,2.7,1v1.2h-8.6L22.4,4.8C20.1,1.9,16.5,0,12.5,0C5.6,0,0,5.6,0,12.5  S5.6,25,12.5,25c3.2,0,6.2-1.2,8.4-3.2l3.6,3.9v1.9H8.7v45.7h15.8v2.5h22v-2.5h10.9v2.5h22v-2.5h13.1V27.6H79.4z M77,15.3  c1.5-0.7,1.6-1.7,1.6-2.2c0-0.4-0.2-1.4-1.5-2.1c1.4-0.7,1.5-1.7,1.5-2.1c0-0.4-0.2-1.5-1.6-2.2C78,6.3,79.3,6,79.8,6  c0.5,0,1.7,0.3,2.6,0.8c0,0,0,0,0,0c-1.5,0.7-1.7,1.8-1.7,2.2c0,0.4,0.1,1.4,1.5,2.1c-1.3,0.7-1.5,1.7-1.5,2.1  c0,0.4,0.2,1.5,1.7,2.2c0,0,0,0,0,0c-0.9,0.4-2,0.8-2.6,0.8C79.3,16.1,78,15.8,77,15.3z M60,15.3c1.5-0.7,1.6-1.7,1.6-2.2  c0-0.4-0.2-1.4-1.5-2.1c1.4-0.7,1.5-1.7,1.5-2.1c0-0.4-0.2-1.5-1.6-2.2C61,6.3,62.2,6,62.8,6c0.5,0,1.7,0.3,2.6,0.8c0,0,0,0,0,0  c-1.5,0.7-1.7,1.8-1.7,2.2c0,0.4,0.1,1.4,1.5,2.1c-1.3,0.7-1.5,1.7-1.5,2.1c0,0.4,0.2,1.5,1.7,2.2c0,0,0,0,0,0  c-0.9,0.4-2,0.8-2.6,0.8C62.2,16.1,61,15.8,60,15.3z M42.9,15.3c1.5-0.7,1.6-1.7,1.6-2.2c0-0.4-0.2-1.4-1.5-2.1  c1.4-0.7,1.5-1.7,1.5-2.1c0-0.4-0.2-1.5-1.6-2.2c1-0.5,2.3-0.8,2.8-0.8c0.5,0,1.7,0.3,2.6,0.8c0,0,0,0,0,0c-1.5,0.7-1.7,1.8-1.7,2.2  c0,0.4,0.1,1.4,1.5,2.1c-1.3,0.7-1.5,1.7-1.5,2.1c0,0.4,0.2,1.5,1.7,2.2c0,0,0,0,0,0c-0.9,0.4-2,0.8-2.6,0.8  C45.2,16.1,43.9,15.8,42.9,15.3z M24.5,70.8H11.2V30.1h13.3V70.8z M20.8,18l-7.7-8.3l-1.8,1.7l7.8,8.5c-1.8,1.6-4.1,2.6-6.7,2.6  c-5.5,0-10-4.5-10-10s4.5-10,10-10c3,0,5.7,1.3,7.5,3.4l0,0l0.4,0.5c1.3,1.7,2.1,3.8,2.1,6C22.5,14.5,21.9,16.4,20.8,18z M22.6,19.9  c1.5-2.1,2.4-4.6,2.4-7.4c0-0.4,0-0.7-0.1-1.1L37.2,25h-10L22.6,19.9z M44,73.3H27V27.5h17V73.3z M57.4,70.8H46.5V30.1h10.9V70.8z   M76.9,73.3h-17V27.5h17V73.3z M90,70.8H79.4V30.1H90V70.8z M36.7,39.2h-2.5v22.4h2.5V39.2z M32.5,39.2H30v22.4h2.5V39.2z M41,39.2  h-2.5v22.4H41V39.2z M69.6,39.2h-2.5v22.4h2.5V39.2z M65.4,39.2h-2.5v22.4h2.5V39.2z"></path> </svg>
+				</i>
+														<span>Опросный лист</span>
+													</a>
+												</div>
 											</div>
 										</div>
 										<!--card bar-->
@@ -3148,6 +3156,14 @@
 		</aside>
 		<!--SIDEBAR-->
 	</div>
+	<aside class="text-popup text-popup-js">
+		<div class="text-popup-layout">
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus blanditiis culpa dolorum facere facilis fugit ipsum laboriosam maxime nostrum odit quae quaerat qui quis sapiente sed, temporibus veniam. Harum, modi?</p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab alias labore non sit! A delectus excepturi, fugit illum impedit laudantium maiores nemo nulla odit, quas quasi repellendus repudiandae sunt tempore.</p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor dolore, enim facere illum ipsam necessitatibus obcaecati odit officiis quaerat quos reprehenderit saepe sequi, totam vitae voluptas. Blanditiis explicabo non tempore!</p>
+			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab cupiditate eos esse harum inventore, laboriosam molestias odit pariatur, porro quisquam quod recusandae repellendus ullam vel voluptatum! Deleniti dignissimos est quaerat.</p>
+		</div>
+	</aside>
 	<!-- >>> foot.tpl <<< -->
 	<!--footer-->
 	<footer class="footer">
