--- a/src/automatic-card.html
+++ b/src/automatic-card.html
@@ -3158,10 +3158,143 @@
 	</div>
 	<aside class="text-popup text-popup-js">
 		<div class="text-popup-layout">
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusamus blanditiis culpa dolorum facere facilis fugit ipsum laboriosam maxime nostrum odit quae quaerat qui quis sapiente sed, temporibus veniam. Harum, modi?</p>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab alias labore non sit! A delectus excepturi, fugit illum impedit laudantium maiores nemo nulla odit, quas quasi repellendus repudiandae sunt tempore.</p>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor dolore, enim facere illum ipsam necessitatibus obcaecati odit officiis quaerat quos reprehenderit saepe sequi, totam vitae voluptas. Blanditiis explicabo non tempore!</p>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab cupiditate eos esse harum inventore, laboriosam molestias odit pariatur, porro quisquam quod recusandae repellendus ullam vel voluptatum! Deleniti dignissimos est quaerat.</p>
+			<div class="text-popup-heading">
+				<a href="#" class="btn-popup-close btn-text-popup-close btn-text-popup-close-js"><i>&nbsp;</i><span>Закрыть</span></a>
+			</div>
+			<h2 class="text-popup-title">Опросный лист</h2>
+			<form action="#" method="post">
+				<div class="form-group">
+					<div class="form-row">
+						<div class="input-wrap light-form field-effects-js">
+							<div class="label-holder"><label for="cf-field-01">Имя <span class="form-mark">*</span></label></div>
+							<input type="text" id="cf-field-01" />
+							<span class="error-note">Поле обязательное для заполнения</span>
+							<span class="confirm-note">&nbsp;</span>
+						</div>
+						<div class="input-wrap light-form field-effects-js">
+							<div class="label-holder"><label for="cf-field-02">Компания <span class="form-mark">*</span></label></div>
+							<input type="text" id="cf-field-02" />
+							<span class="error-note">Поле обязательное для заполнения</span>
+							<span class="confirm-note">&nbsp;</span>
+						</div>
+					</div>
+					<div class="form-row">
+						<div class="input-wrap light-form field-effects-js">
+							<div class="label-holder"><label for="cf-field-03">Телефон <span class="form-mark">*</span></label></div>
+							<input type="text" id="cf-field-03" />
+							<span class="error-note">Поле обязательное для заполнения</span>
+							<span class="confirm-note">&nbsp;</span>
+						</div>
+						<div class="input-wrap light-form field-effects-js">
+							<div class="label-holder"><label for="cf-field-04">Электронная почта <span class="form-mark">*</span></label></div>
+							<input type="email" id="cf-field-04" />
+							<span class="error-note">Поле обязательное для заполнения</span>
+							<span class="confirm-note">&nbsp;</span>
+						</div>
+					</div>
+				</div>
+				<div class="form-group">
+					<div class="form-row">
+						<div class="input-wrap light-form field-effects-js">
+							<div class="label-holder">
+								<label for="light-custom-select-example">Мощность:</label>
+							</div>
+							<div class="select">
+								<select class="cselect" id="light-custom-select-example" data-placeholder="Выбрать">
+								<option value=""></option> <!--Важно! Этот пункт должен быть пустым-->
+								<option value="1">Размер</option>
+								<option value="2">Вес</option>
+								<option value="3">Цвет</option>
+								<option value="4">Позицию (расположение)</option>
+								<option value="5">Опшин очень-очень-очень-очень длинный</option>
+								<option value="6">Контраст</option>
+								<option value="7">Сочетание</option>
+								<option value="8">Расстояние</option>
+							</select>
+								<span class="error-note">Обязательное поле</span>
+								<span class="confirm-note">&nbsp;</span>
+							</div>
+						</div>
+						<div class="input-wrap light-form field-effects-js">
+							<div class="label-holder">
+								<label for="light-custom-select-example">Селект:</label>
+							</div>
+							<div class="select">
+								<select class="cselect" id="light-custom-select-example" data-placeholder="Выбрать">
+								<option value=""></option> <!--Важно! Этот пункт должен быть пустым-->
+								<option value="1">Размер</option>
+								<option value="2">Вес</option>
+								<option value="3">Цвет</option>
+								<option value="4">Позицию (расположение)</option>
+								<option value="5">Опшин очень-очень-очень-очень длинный</option>
+								<option value="6">Контраст</option>
+								<option value="7">Сочетание</option>
+								<option value="8">Расстояние</option>
+							</select>
+								<span class="error-note">Обязательное поле</span>
+								<span class="confirm-note">&nbsp;</span>
+							</div>
+						</div>
+					</div>
+					<a href="#" class="btn-more btn-with-icon"><i class="depict-plus">&nbsp;</i><span>Добавить поле</span></a>
+				</div>
+				<div class="form-group">
+					<h3 class="form-group-title">Использование</h3>
+					<ul class="check-list">
+						<li>
+							<label class="check-label">
+							<input type="checkbox" name="value-1" />
+							<i>&nbsp;</i>
+							<span>Значение 1</span>
+						</label>
+						</li>
+						<li>
+							<label class="check-label">
+							<input type="checkbox" name="value-2" />
+							<i>&nbsp;</i>
+							<span>Значение 2</span>
+						</label>
+						</li>
+						<li>
+							<label class="check-label">
+							<input type="checkbox" name="value-3" />
+							<i>&nbsp;</i>
+							<span>Значение 3</span>
+						</label>
+						</li>
+						<li>
+							<label class="check-label">
+							<input type="checkbox" name="value-4" />
+							<i>&nbsp;</i>
+							<span>Значение 4</span>
+						</label>
+						</li>
+						<li>
+							<label class="check-label">
+							<input type="checkbox" name="value-5" />
+							<i>&nbsp;</i>
+							<span>Значение 5</span>
+						</label>
+						</li>
+					</ul>
+				</div>
+				<div class="form-group">
+					<div class="input-wrap light-form field-effects-js">
+						<div class="label-holder"><label for="cf-field-05">Сообщение</label></div>
+						<textarea id="cf-field-05"></textarea>
+						<span class="error-note">Поле обязательное для заполнения</span>
+						<span class="confirm-note">&nbsp;</span>
+					</div>
+				</div>
+				<div class="form-footer">
+					<div class="form-buttons">
+						<button class="btn-outline btn-submit" data-label="Отправить">Отправить</button>
+					</div>
+					<div class="form-note">
+						<div class="form-note__item"><span class="form-mark">*</span> Поля обязательны для заполнения</div>
+					</div>
+				</div>
+			</form>
 		</div>
 	</aside>
 	<!-- >>> foot.tpl <<< -->
