--- a/src/typography.html
+++ b/src/typography.html
@@ -882,6 +882,27 @@
 											<input class="btn-default-alt" type="reset" value="Type reset">
 										</div>
 									</div>
+									<h4><span class="mark"></span><a href="#hashButtonsAlt" id="hashButtonsAlt" class="hashAnchor"><span class="mark">Кнопки со стрелками</span></a></h4>
+									<div class="layout-text">
+										<div style="padding: 0 0 20px;">
+											<a href="#" class="btn-outline btn-with-arrow"><span>Смотреть все</span><i>&nbsp;</i></a>
+										</div>
+										<div style="padding: 0 0 20px;">
+											<a href="#" class="btn-outline btn-with-arrow"><i>&nbsp;</i><span>Вернуться к каталогу</span></a>
+										</div>
+										<div style="padding: 0 0 20px;">
+											<a href="#" class="btn-outline btn-with-arrow"><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium beatae consequatur cupiditate eos, ex harum hic molestias mollitia nam nihil officiis, praesentium quas, quidem quos ratione sint voluptatibus voluptatum! Nam.</span><i>&nbsp;</i></a>
+										</div>
+										<div style="padding: 0 0 20px;">
+											<a href="#" class="btn-outline-alt btn-with-arrow"><span>Смотреть все</span><i>&nbsp;</i></a>
+										</div>
+										<div style="padding: 0 0 20px;">
+											<a href="#" class="btn-outline-alt btn-with-arrow"><i>&nbsp;</i><span>Вернуться к каталогу</span></a>
+										</div>
+										<div style="padding: 0 0 20px;">
+											<a href="#" class="btn-outline-alt btn-with-arrow"><span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium beatae consequatur cupiditate eos, ex harum hic molestias mollitia nam nihil officiis, praesentium quas, quidem quos ratione sint voluptatibus voluptatum! Nam.</span><i>&nbsp;</i></a>
+										</div>
+									</div>
 									<!--style default button end-->
 									<div class="user-spacer">&nbsp;</div>
 									<!--form-default-->
